--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@angular/service-worker": "~11.2.0",
+    "@ngbmodule/material-carousel": "^0.7.1",
+    "@ngu/carousel": "^3.0.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
