--- a/package.json
+++ b/package.json
@@ -25,9 +25,21 @@
     "@angular/service-worker": "~11.2.0",
     "@ngbmodule/material-carousel": "^0.7.1",
     "@ngu/carousel": "^3.0.2",
+    "base64url": "^3.0.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "firebase": "^8.2.7",
+    "firebase-admin": "^9.5.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.16",
+    "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "validator": "^13.5.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
