--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngbmodule/material-carousel": "^0.7.1",
     "@ngu/carousel": "^3.0.2",
     "base64url": "^3.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
