--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb+srv://reviews:reviews@cluster0.eyuww.mongodb.net/reviews?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://reviews:reviews@cluster0.eyuww.mongodb.net/reviews?retryWrites=true
 PORT = 5000
 JWT_SECRET = nodeapp12345
