--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "amazon-paapi": "^1.0.5",
     "async": "^3.2.0",
     "base64url": "^3.0.1",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
