--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest",
-              "src/sitemap.xml"
+              "src/sitemap.xml",
+              "src/ads.txt"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -101,7 +102,9 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest",
-              "src/sitemap.xml"
+              "src/sitemap.xml",
+              "src/ads.txt"
+
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
