--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazon",
+  "name": "reviews",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -45,6 +45,7 @@
     "passport-local": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "update": "^0.7.4",
     "validator": "^13.5.2",
     "zone.js": "~0.11.3"
   },
