--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "reviews",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
+    "ng": "ng serve",
     "start": "node server.js",
-    "build": "ng build --prod --aot --outputPath=dist",
-    "dev": "concurrently -c \"yellow.bold,green.bold\" -n \"SERVER,BUILD\" \"nodemon server\" \"ng build --watch --outputPath=dist\"",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "node server.js"
+
   },
   "private": true,
   "dependencies": {
@@ -33,11 +30,5 @@
     "update": "^0.7.4",
     "validator": "^13.5.2",
     "zone.js": "~0.11.3"
-  },
-  "devDependencies": {
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
   }
 }
