--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "reviews",
-  "version": "0.0.0",
+  "name": "starter-express-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "ng": "ng serve",
-    "start": "node server.js",
-    "build": "node server.js"
-
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/cyclic-software/starter-express-api/issues"
+  },
+  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "amazon-paapi": "^1.0.5",
-    "async": "^3.2.0",
+    "@angular/fire": "^7.5.0",
+    "amazon-paapi": "^1.0.7",
     "base64url": "^3.0.1",
-    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "firebase": "^8.2.7",
-    "firebase-admin": "^9.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
+    "firebase": "^9.15.0",
+    "firebase-admin": "^11.3.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.16",
-    "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^2.0.7",
-    "passport": "^0.4.1",
+    "mongoose": "^6.8.0",
+    "mongoose-unique-validator": "^3.1.0",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "update": "^0.7.4",
-    "validator": "^13.5.2",
-    "zone.js": "~0.11.3"
+    "validator": "^13.7.0"
   }
 }
